fix: add spacing between profile picture and social icons

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -95,6 +95,10 @@ p {
   text-align: center !important;
 }
 
+.social-media-icons {
+  margin-top: 1em;
+}
+
 .green-text {
   color: var(--secondary-color);
 }
